Release 4 (2012-??-??)
======================

Modules
-------

 - Core: changed the initialization event from "vorpleInit" to "init.vorple",
   in preparation of namespaced parser events
 - Core: Made vorple.core.engine() return the engine that's used to initialize
   Vorple, not the engine that is otherwise available
 - Html: Fixed a bug where vorple.html.url() would not return correct values
   when no filename was given
   
   
Tests
-----

 - Restructured the tests so that they can be run at the same time
 - Updated QUnit to the latest version



Release 3 (2012-04-26)
======================

Documentation
-------------

 - Added a fallback to local jQuery UI library if the CDN fails
 - Added the undum namespace to examples where it was missing
 - Removed the rather weak "resources" section from the Undum introduction
 - Added a link to Starborn
 - Added links to example stories' source codes
 - Added a section about link popups to the documentation and the API
 - Removed the vertical scroll bars from the code examples
 - Added a note about Mobile Safari audio limitations
 

Examples
--------

 - New folder structure in preparation for Inform 7 examples
 - Added the Inform 7 preview
 - One With Everything: Fixed a bug where navigation buttons would be
   duplicated when a save game was erased
 - Rabbithole: Switched to using the notify module instead of jQuery UI


Libraries
---------

 - Added the noty library
 - Updated to latest qTip2
 

Modules
-------

 - Added the notify module
    
    
Releases
--------

 - Added the missing qTip CSS file to the Undum theme
 


Release 2 (2012-02-04)
======================

Documentation
-------------

 - Fixed the documentation for preloading multiple images.
 - Added a note about playing sounds in iOS devices.
 

Examples
--------

 - Down the Rabbit-Hole now preloads the images it uses.


Libraries
---------

 - Updated jQuery to 1.7.1.
 

Modules
-------

 - Buttons: rewrote the button system.