@@ -1956,6 +1956,18 @@ vorple.html.link( 'name', 'link', { classes: 'unique' } );
 </ul>
 
 
+<h4><code>doClick()</code> and <code>doLink()</code> exposures</h4>
+
+<p>
+<code>undum.doClick()</code> and <code>undum.doLink()</code> are exposed as
+<code>vorple.undum.doClick()</code><a href="../API/symbols/vorple.undum.html#.doClick" class="api">API</a>
+and
+<code>vorple.undum.doLink()</code><a href="../API/symbols/vorple.undum.html#.doLink" class="api">API</a>.
+This lets the author use them outside Undum's own methods, when the
+<code>undum</code> object is not available.
+</p>
+
+
 <h2 id="examples">Complete examples</h2>
 
 <p>
